add log print in libserialport_jni.c

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -10,4 +10,5 @@
     <string name="clear_send_str">Clear</string>
     <string name="receive_data_label_str">Receive Data:</string>
     <string name="receive_clear_str">Clear</string>
+    <string name="open_failed_str">Open Failed</string>
 </resources>
