--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="clear_send_str">清除</string>
     <string name="receive_data_label_str">接收的数据：</string>
     <string name="receive_clear_str">清除</string>
+    <string name="open_failed_str">打开失败</string>
 </resources>
